made changes to .env file

--- a/.env_example
+++ b/.env_example
@@ -1,7 +1,7 @@
 # Environment variables for the Appointment Reminders Django app
 
 # Django settings to use in this environment
-export DJANGO_SETTINGS_MODULE=patientappointment.settings.local
+export DJANGO_SETTINGS_MODULE=patientappointment.settings.production
 
 # Twilio API credentials
 export TWILIO_NUMBER=+###########
